Fix WMS URLs to use dynamic host instead of hardcoded localhost
- Updated map_viewer and public_map_viewer to generate URLs based on request host
- Fixed map_detail.html template to use dynamic GeoServer URL
- Updated documentation.html to show correct WMS URL
- This fixes map display issues on remote servers behind reverse proxy

--- a/adma_geo/templates/filemanager/documentation.html
+++ b/adma_geo/templates/filemanager/documentation.html
@@ -881,7 +881,7 @@ Duplicate 3: document_3.pdf
                 <h3>GeoServer Integration</h3>
                 <p>GIS data is served through GeoServer REST API:</p>
                 <div class="code-block">
-WMS URL: http://localhost:8080/geoserver/wms
+WMS URL: {{ request.scheme }}://{{ request.get_host }}/geoserver/wms
 Workspace: adma_geo
 Layer Format: {workspace}:{layer_name}
 GetCapabilities: ?service=WMS&request=GetCapabilities
